<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="26dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back"
            app:tint="@color/darkgreen" />

        <TextView
            android:id="@+id/myTutories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/my_tutories"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_centerVertical="true"
            android:text="@string/delete"
            android:textColor="#FF0000"
            android:textSize="14sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/tutories_title"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTutoriesName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="24dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="left|center"
                android:hint="@string/enter_tutories_title"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/which_category"
                android:textSize="14sp" />

            <!-- Changed from EditText to TextView since category shouldn't be editable -->
            <TextView
                android:id="@+id/tvCategoryName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="24dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="left|center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/about_you"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="top"
                android:hint="@string/about_you_text"
                android:minHeight="120dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/method"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editMethodology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="top"
                android:hint="@string/method_text"
                android:minHeight="120dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/rate_per_hour"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textRateInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Rp."
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editRate"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:paddingVertical="8dp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="left|center"
                    android:hint="Min. 5.000"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="/ Hour"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/type_lessons"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnOnline"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector_online"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:stateListAnimator="@null"
                    android:text="@string/online"
                    android:textColor="@color/button_text_selector_online"
                    app:backgroundTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnOnsite"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector_onsite"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:stateListAnimator="@null"
                    android:text="@string/onsite"
                    android:textColor="@color/button_text_selector_onsite"
                    app:backgroundTint="@null" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/your_tutories_status"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/btnTutoriesStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:thumbTint="@color/white"
                    android:trackTint="@color/green" />

                <TextView
                    android:id="@+id/tvTutoriesStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_disabled"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/darkgreen"
                android:fontFamily="@font/montserrat_semi_bold"
                android:padding="12dp"
                android:text="@string/confirm"
                android:textColor="@color/purewhite" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

