<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile_completion_setting_text"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/profile_completion_setting_detail_text"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="12sp"
        android:textColor="#80000000" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:text="@string/back"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textSize="14sp"
            android:textColor="@color/darkgreen"
            android:textAllCaps="false"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnToProfile"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/darkgreen"
            android:text="@string/profile_setting"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:cornerRadius="20dp" />
    </LinearLayout>
</LinearLayout>